# linenoise

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.markdown  example.c  linenoise.c  linenoise.h
src/: CMakeLists.txt  linenoise.c  linenoise.h
